create group issue fix